# task_tracker

./: .gitignore  README.md  pyproject.toml
data/: task_data.json
src/tasktracker/: colors.py  pretty_print.py  task_tracker.py  tasks.py  tasks_data.json
tests/: test_tasktracker.py
